@@ -1181,8 +1181,9 @@ IF(USE_OPENCV)
     # additional check to see if opencv_nonfree module introduced in OpenCV 2.4 is available
     #message("OpenCV_VERSION = ${OpenCV_VERSION}")
     #message("OpenCV_NONFREE_FOUND: ${OPENCV_NONFREE_FOUND}")
-    if(${OpenCV_VERSION})
-      if(${OpenCV_VERSION} VERSION_LESS "2.4.2")
+    if(OpenCV_VERSION)
+      if(OpenCV_VERSION VERSION_LESS "2.4.2")
+        message(STATUS "OpenCV nonfree found")
         set(VISP_HAVE_OPENCV_NONFREE TRUE)  # for header vpConfig.h
       else() # Version is greater or equal to 2.4.0
         if(OPENCV_NONFREE_FOUND)
@@ -1193,6 +1194,7 @@ IF(USE_OPENCV)
         endif()
       endif()
     else()
+      message("OpenCV_VERSION is false")
       message(STATUS "OpenCV nonfree not found")
     endif()
   ELSE(OpenCV_FOUND)
